--- a/core/assets/system/remap_manager/locale/en/lang_strings.xml
+++ b/core/assets/system/remap_manager/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.3 2010/09/17 05:34:38 mhaidar Exp $
+* $Id: lang_strings.xml,v 1.3.2.1 2011/02/03 05:25:17 cupreti Exp $
 *
 */
 
@@ -23,4 +23,7 @@
     <string source="remap_manager_auto_add_remaps_note">This option defines the default behaviour when altering the Web Paths of an asset. This can be overridden on an asset-by-asset basis when changing Web Paths.</string>
     <string source="remap_manager_never_delete_remap_default_question">Never Delete added remaps?</string>
     <string source="remap_manager_never_delete_remap_default_note">This option defines the default setting for the "Never Delete" field of each added remap.</string>
+	<string source="purge_all_remaps">Purge All Remaps</string>
+	<string source="purge_all_remaps_note">This will delete all the remaps having "Never Delete" option set to "No".</string>	
+	<string source="confirm_purge_all_remaps" js="1">Are you sure you want to delete all the remaps having "Never Delete" option set to "No"?</string>	
 </strings>
