--- a/packages/import_tools/locale/en/lang_strings.xml
+++ b/packages/import_tools/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.15 2010/08/26 06:44:59 akarelia Exp $
+* $Id: lang_strings.xml,v 1.15.2.1 2011/02/14 00:36:01 ewang Exp $
 *
 *
 * CMS Package Localised Strings File
@@ -98,5 +98,11 @@
 <string source="tool_import_assets_from_xml_file_upload_note">Select the XML file to import Assets from. Structure should be as in <![CDATA[<a href="%s" target="_blank">example.xml</a>]]></string>
 <string source="tool_import_assets_from_xml_create_under">Import Asset under (optional)</string>
 <string source="tool_import_assets_from_xml_create_under_note">If Asset is specified the assets are imported under that asset</string>
+
+<!-- Export Assets to XML Tool -->
+<string source="tool_export_assets_to_xml_hipo_name">Hipo Job Export Assets To XML</string>
+<string source="tool_export_assets_to_xml_root_node">Root Node</string>
+<string source="tool_export_assets_to_xml_root_node_note">Export all assets underneath root node to target parent node. Design, permission, linking can be maintained only if all involved assets are exported together. Use More button to select multiple root nodes.</string>
+<string source="tool_export_assets_to_xml_target_parent">links to target parent asset id</string>
 
 </strings>
