--- a/packages/cms/form/form/locale/en/lang_screen_contents.xml
+++ b/packages/cms/form/form/locale/en/lang_screen_contents.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_contents.xml,v 1.20 2010/11/03 04:07:15 ewang Exp $
+* $Id: lang_screen_contents.xml,v 1.21 2011/02/16 23:38:47 akarelia Exp $
 *
 */
 -->
@@ -304,5 +304,11 @@
 			<display_name>CAPTCHA Regen Link Text</display_name>
 			<note>This text will appear when the %form_mollom_captcha_regen_link% keyword is used.</note>
 		</field>
-	</section>	
+	</section>
+	<section name="Security Enhancement">
+		<field attribute="disable_keyword_replacements">
+			<display_name>Disable Keyword Replacements</display_name>
+			<note>If set to Yes, Form will not replace the keywords that might be used in the user input on the frontend.</note>
+		</field>
+	</section>
 </contents>
