--- a/core/locale/en/lang_errors.xml
+++ b/core/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.129 2011/02/17 01:14:49 akarelia Exp $
+* $Id: lang_errors.xml,v 1.130 2011/02/18 03:21:17 cupreti Exp $
 *
 */
 
@@ -1805,7 +1805,10 @@ Full Node Contents :
 
 	<!-- Form Question - Select -->
 	<error code="CORE0302">Cannot use 'Empty Text Key' provided. It is duplicate to one of the keys in provided Options</error>
-
+	
+	<!-- Image file -->
+	<error code="CORE0304">Uploaded file is not a image file</error>
+	
 	<error code="RPRT0000">Could not open temporary file, report generation aborted</error>
 		<!-- packages/cms/reports/report_links/report_links_edit_fns.inc:84: -->
 		<!-- packages/cms/reports/report_links/report_links_edit_fns.inc:91: -->
