--- a/core/assets/form/simple_form/locale/en/lang_screen_details.xml
+++ b/core/assets/form/simple_form/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.2 2006/12/06 00:35:32 emcdonald Exp $
+* $Id: lang_screen_details.xml,v 1.3 2011/02/21 02:28:43 cupreti Exp $
 *
 */
 -->
@@ -60,6 +60,12 @@
 		<field attribute="reset_button">
 			<display_name>Reset Button Text</display_name>
 			<note>Defines the name of the button to reset (clear) the form</note>
+		</field>
+	</section>
+	<section name="Security Enhancement">
+		<field attribute="disable_keyword_replacements">
+			<display_name>Disable Keyword Replacements</display_name>
+			<note>If set to Yes, Form will not replace the keywords that might be used in the user input on the frontend.</note>
 		</field>
 	</section>
 </contents>
