--- a/packages/cms/form/form/locale/en/lang_screen_contents.xml
+++ b/packages/cms/form/form/locale/en/lang_screen_contents.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_contents.xml,v 1.18 2009/06/15 04:31:55 ewang Exp $
+* $Id: lang_screen_contents.xml,v 1.18.6.1 2011/02/22 22:03:24 cupreti Exp $
 *
 */
 -->
@@ -275,4 +275,10 @@
 			</function_call>
 		</field>
 	</section>
+	<section name="Security Enhancement">
+		<field attribute="disable_keyword_replacements">
+			<display_name>Disable Keyword Replacements</display_name>
+			<note>If set to Yes, Form will not replace the keywords that might be used in the user input on the frontend.</note>
+		</field>
+	</section>	
 </contents>
