--- a/packages/funnelback/page_templates/funnelback_search_page/locale/en/lang_screen_details.xml
+++ b/packages/funnelback/page_templates/funnelback_search_page/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.3.2.1 2010/06/10 05:35:31 cupreti Exp $
+* $Id: lang_screen_details.xml,v 1.3.2.2 2011/02/22 22:03:30 cupreti Exp $
 *
 */
 -->
@@ -100,4 +100,10 @@
 			<note />
 		</field>
 	</section>
+	<section name="Security Enhancement" write_access="write:attributes">
+		<field attribute="disable_keyword_replacements">
+			<display_name>Disable Keyword Replacements</display_name>
+			<note>If set to Yes, Funnelback Search Page will not replace the keywords that might be used in the user input on the frontend.</note>
+		</field>
+	</section>	
 </contents>
