--- a/packages/search/search_page/locale/en/lang_screen_details.xml
+++ b/packages/search/search_page/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.33 2009/08/20 06:16:41 ewang Exp $
+* $Id: lang_screen_details.xml,v 1.33.4.1 2011/02/22 22:03:44 cupreti Exp $
 *
 */
 -->
@@ -199,4 +199,10 @@
 			<note />
 		</field>
 	</section>
+	<section name="Security Enhancement" write_access="write:attributes">
+		<field attribute="disable_keyword_replacements">
+			<display_name>Disable Keyword Replacements</display_name>
+			<note>If set to Yes, Search Page will not replace the keywords that might be used in the user input on the frontend.</note>
+		</field>
+	</section>	
 </contents>
