--- a/packages/ecommerce/form/form_ecommerce/locale/en/lang_screen_formatting.xml
+++ b/packages/ecommerce/form/form_ecommerce/locale/en/lang_screen_formatting.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_formatting.xml,v 1.6 2008/11/25 00:48:04 mbrydon Exp $
+* $Id: lang_screen_formatting.xml,v 1.7 2011/03/14 00:40:51 mhaidar Exp $
 *
 */
 -->
@@ -29,6 +29,11 @@
 			<text width="40" height="1" />
 			<note>If the item is taxable, %taxable_item_string% keyword will contain this value. If item is not taxable, the value will be empty.</note>
 		</field>
+		<field attribute="currency_sign">
+			<display_name>Currency Sign</display_name>
+			<text width="40" height="1" />
+			<note>%currency_sign% keyword will contain this value and keywords such as %form_summary% will make use of this value.</note>
+		</field>
 	</section>
 	<section name="Form View" write_access="write:attributes" >
 		<field attribute="form_asset_list_format">
@@ -39,7 +44,7 @@
 		<field attribute="form_asset_format">
 			<display_name>Individual Asset Format</display_name>
 			<text width="60" height="4" />
-			<note>This format will be used to print each asset in the cart. Keywords available here are %item_name%, %item_price% and %taxable_item_string as well as any keyword available on the asset in cart.</note>
+			<note>This format will be used to print each asset in the cart. Keywords available here are %item_name%, %item_price%, %currency_sign% and %taxable_item_string% as well as any keyword available on the asset in cart.</note>
 		</field>
 	</section>
 	<section name="Confirmation View">
@@ -60,7 +65,7 @@
 		<field attribute="item_format">
 			<display_name>Item Format</display_name>
 			<text width="60" height="10" />
-			<note>This specifies the formatting of each ecom item printed by the %order_item_list% keyword on the Confirmation and Receipt views. This format can use the following keywords: %item_name%, %item_price%, %taxable_item_string%</note>
+			<note>This specifies the formatting of each ecom item printed by the %order_item_list% keyword on the Confirmation and Receipt views. This format can use the following keywords: %item_name%, %item_price%, %currency_sign%, %taxable_item_string%</note>
 		</field>
 	</section>
 </contents>
