--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.385 2011/03/10 23:26:23 akarelia Exp $
+* $Id: lang_strings.xml,v 1.386 2011/03/29 05:32:34 akarelia Exp $
 *
 */
 
@@ -1359,7 +1359,7 @@ Force that this asset can only be viewed through a Secure (SSL) connection</stri
 	<string source="trigger_action_set_site_special_page_use_direct_parent_sites">Use the direct parent sites of the broadcasting asset</string>
 	<string source="trigger_action_set_site_special_page_site_missing">The site is not specified or using the direct parent sites of the broadcasting asset is not selected</string>
 	<string source="trigger_action_set_site_special_page_special_page_type_invalid">The special page type is invalid</string>
-
+	
 	<!-- common single word strings -->
 
 	<string source="all">All</string>
@@ -2311,7 +2311,11 @@ If you are ready to continue, please click <strong>Next</strong> to proceed with
 	<string source="http_header_send_404_cacheable_header_field_note">If enabled, server will send cacheable Cache-Control and Pragma headers for 404 response to allow Proxy server to cache.</string>
 	<string source="http_header_use_http_x_forwarded_for">Use "X-Forwarded-For" Header</string>
 	<string source="http_header_use_http_x_forwarded_for_note">Only enable to help obtain User IP when behind a proxy. System will attempt to use "X-Forwarded-For" header. By default the REMOTE_ADDR server variable is used. This will only work in conjunction with a trusted/known Proxy IP list below.</string>
-	
+	<string source="http_header_cookie_http_only_field_name">HTTP only for cookie</string>
+	<string source="http_header_cookie_http_only_note">Enable to set 'HttpOnly' option for the cookies. When a cookie is HttpOnly the web browser should not allow client side scripts such as JavaScript to have access to the cookie. This can help mitigate the effects of cross site scripting attacks.</string>
+	<string source="http_header_cookie_secure_option_field_name">Enable 'Secure' Cookie option</string>
+	<string source="http_header_cookie_secure_option_note">Specifies whether or not the cookie should only be transmitted over a secure HTTPS connection. Yes (true) indicates that the cookie will only be set if a secure connection exists.</string>
+
 	<!-- Roles configuration strings -->
 	<string source="roles_configuration_section_name">Roles Configuration</string>
 	<string source="roles_configuration_enable_global_roles">Enable Global Roles</string>
