--- a/core/locale/en/lang_strings.xml
+++ b/core/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.386 2011/03/29 05:32:34 akarelia Exp $
+* $Id: lang_strings.xml,v 1.387 2011/03/29 21:55:20 akarelia Exp $
 *
 */
 
@@ -2312,7 +2312,7 @@ If you are ready to continue, please click <strong>Next</strong> to proceed with
 	<string source="http_header_use_http_x_forwarded_for">Use "X-Forwarded-For" Header</string>
 	<string source="http_header_use_http_x_forwarded_for_note">Only enable to help obtain User IP when behind a proxy. System will attempt to use "X-Forwarded-For" header. By default the REMOTE_ADDR server variable is used. This will only work in conjunction with a trusted/known Proxy IP list below.</string>
 	<string source="http_header_cookie_http_only_field_name">HTTP only for cookie</string>
-	<string source="http_header_cookie_http_only_note">Enable to set 'HttpOnly' option for the cookies. When a cookie is HttpOnly the web browser should not allow client side scripts such as JavaScript to have access to the cookie. This can help mitigate the effects of cross site scripting attacks.</string>
+	<string source="http_header_cookie_http_only_note">Enable to set 'HttpOnly' option for the cookies. When a cookie is HttpOnly the web browser should not allow client side scripts such as JavaScript to have access to the cookie. This can help mitigate the effects of cross site scripting attacks.<i> (Available for PHP Version greater than 5.2.0)</i></string>
 	<string source="http_header_cookie_secure_option_field_name">Enable 'Secure' Cookie option</string>
 	<string source="http_header_cookie_secure_option_note">Specifies whether or not the cookie should only be transmitted over a secure HTTPS connection. Yes (true) indicates that the cookie will only be set if a secure connection exists.</string>
 
